# cold-clear-2

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
benches/: movegen.rs
src/: bot.rs  convert.rs  dag.rs  data.rs  default.json  lib.rs  main.rs  map.rs  movegen.rs  profile.rs  sharing.rs  sync.rs  tbp.rs
src/bot/: freestyle.rs
src/dag/: known.rs  layer.rs  speculated.rs
