[package]
name = "cold-clear-2"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.4"
enum-map = "1.1.1"
enum_dispatch = "0.3.7"
enumset = "1.0.6"
futures = "0.3.15"
nohash = "0.2.0"
once_cell = "1.7.2"
ordered-float = "2.5.0"
parking_lot = "0.11.1"
rand = "0.8.3"
serde_json = "1.0.64"
smallvec = { version = "1.6.1", features = ["union"] }

[dependencies.tbp]
git = "https://github.com/tetris-bot-protocol/tbp-rs"
branch = "main"
features = [
    "randomizer",
    "move_info",
]
